# gpu_texture_compress

./: .gitattributes  .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  astc6x6_quality_test.txt  astc_test_result.txt  astc_test_results.txt  bc_test_result.txt  benchmark_output.txt  run_all_baselines.bat  test_results.txt
data/: datasets.md
docs/: 实验总结1.md  实验总结2.md
docs/research/: research_v1.md
experiments/: program.md  run_experiment.py
experiments/configs/: astc_4x4_l0.json  astc_4x4_l1.json  astc_4x4_l2.json  astc_4x4_vs_6x6.json  astc_6x6_l0.json  astc_6x6_l1.json  astc_6x6_l2.json  astc_6x6_quality_levels.json  astc_6x6_test.json  astc_all_block_sizes.json  astc_all_khronos.json  astc_fix_test.json  astc_full_khronos.json  astc_quality_test.json  astc_sweep.json  bc1_comprehensive.json  bc1_quality_0_full_test.json  bc1_quality_2_full_test.json  bc1_quality_2_test.json  bc4_bc5_grayscale_test.json  bc4_grayscale.json  bc4_grayscale_test.json  bc4_singlechannel.json  bc5_normal_map_test.json  bc5_normalmap.json  bc6h_hdr.json  bc6h_quality_0_test.json  bc6h_quality_2_test.json  bc6h_test.json  bc7_level_0.json  bc7_level_1.json  bc7_level_2.json  bc7_mode1_test.json  bc7_quality_levels_test.json  bcn_test.json  comprehensive_benchmark.json  comprehensive_l0.json  comprehensive_l2.json  comprehensive_quality_sweep.json  final_full_benchmark.json  (+32 more)
experiments/programs/: astc.md  bc1.md  bc3.md  bc4.md  bc5.md  bc6h.md  bc7.md
include/: shared_types.h
sdk/: README.md
sdk/include/: gtc_formats.h
sdk/shaders/common/: gtc_interface.hlsl
sdk/shaders/compress/: astc.hlsl  astc_10x10.hlsl  astc_10x10_hdr.hlsl  astc_10x5.hlsl  astc_10x5_hdr.hlsl  astc_10x6.hlsl  astc_10x6_hdr.hlsl  astc_10x8.hlsl  astc_10x8_hdr.hlsl  astc_12x10.hlsl  astc_12x10_hdr.hlsl  astc_12x12.hlsl  astc_12x12_hdr.hlsl  astc_4x4.hlsl  astc_4x4_hdr.hlsl  astc_4x4_multipartition.hlsl  astc_5x4.hlsl  astc_5x4_hdr.hlsl  astc_5x5.hlsl  astc_5x5_hdr.hlsl  astc_6x5.hlsl  astc_6x5_hdr.hlsl  astc_6x6.hlsl  astc_6x6_hdr.hlsl  astc_8x5.hlsl  astc_8x5_hdr.hlsl  astc_8x6.hlsl  astc_8x6_hdr.hlsl  astc_8x8.hlsl  astc_8x8_hdr.hlsl  astc_block_modes.hlsl  astc_common.hlsl  astc_encode_core.hlsl  astc_encode_grid5x5.hlsl  astc_encode_grid5x5_generic.hlsl  astc_encode_grid_1to1.hlsl  astc_encode_triple.hlsl  astc_hdr.hlsl  bc1.hlsl  bc4.hlsl  (+2 more)
sdk/shaders/dispatch/: astc_10x10_cs.hlsl  astc_10x5_cs.hlsl  astc_10x6_cs.hlsl  astc_10x6_hdr_cs.hlsl  astc_10x8_cs.hlsl  astc_10x8_hdr_cs.hlsl  bc3_cs.hlsl  (+16 more)
shaders/common/: endpoint_fit.hlsl
shaders/compress/: astc_10x10.hlsl  astc_10x5.hlsl  astc_10x8.hlsl  astc_10x8_hdr.hlsl  astc_12x10.hlsl  astc_12x10_hdr.hlsl  astc_12x12.hlsl  astc_4x4_hdr.hlsl  astc_5x4.hlsl  astc_5x4_hdr.hlsl  astc_5x5.hlsl  astc_5x5_hdr.hlsl  astc_6x5.hlsl  astc_6x5_hdr.hlsl  astc_6x6.hlsl  astc_8x5.hlsl  astc_8x6_hdr.hlsl  astc_8x8.hlsl  astc_8x8_hdr.hlsl  astc_common.hlsl  astc_encode_core.hlsl  astc_encode_dual.hlsl  astc_encode_triple.hlsl  astc_hdr_improved.hlsl  bc1.hlsl  bc4.hlsl  bc6h.hlsl  bc7.hlsl
shaders/dispatch/: astc_10x10_cs.hlsl  astc_10x10_hdr_cs.hlsl  astc_10x5_cs.hlsl  astc_12x12_hdr_cs.hlsl  astc_4x4_hdr_cs.hlsl  astc_5x4_hdr_cs.hlsl  astc_6x5_cs.hlsl  astc_6x6_cs.hlsl  astc_8x6_hdr_cs.hlsl  astc_8x8_hdr_cs.hlsl  bc4_cs.hlsl  bc6h_cs.hlsl
shaders_link/common/: color_space.hlsl  gtc_interface.hlsl
shaders_link/compress/: astc_10x10_hdr.hlsl  astc_10x5.hlsl  astc_10x5_hdr.hlsl  astc_10x6.hlsl  astc_10x6_hdr.hlsl  astc_10x8.hlsl  astc_12x10.hlsl  astc_12x12.hlsl  astc_12x12_hdr.hlsl  astc_4x4.hlsl  astc_5x4.hlsl  astc_5x5.hlsl  astc_6x5.hlsl  astc_6x6.hlsl  astc_6x6_hdr.hlsl  astc_8x5.hlsl  astc_8x5_hdr.hlsl  astc_8x6.hlsl  astc_8x8.hlsl  astc_block_modes.hlsl  astc_common.hlsl  astc_encode_dual.hlsl  astc_hdr_proper.hlsl  bc1.hlsl  bc3.hlsl  bc6h.hlsl  bc7.hlsl
shaders_link/dispatch/: astc_10x5_hdr_cs.hlsl  astc_12x10_cs.hlsl  astc_12x10_hdr_cs.hlsl  astc_12x12_cs.hlsl  astc_5x5_cs.hlsl  astc_8x5_cs.hlsl  astc_8x5_hdr_cs.hlsl  astc_8x8_cs.hlsl  bc1_cs.hlsl
src/: CMakeLists.txt  bitmap_font5x7.h  comparison_baker.cpp  comparison_baker.h  compression_pipeline.cpp  compression_pipeline.h  compute_dispatch.cpp  compute_dispatch.h  decompressor.cpp  decompressor.h  eval_metrics.cpp  eval_metrics.h  experiment_runner.cpp  experiment_runner.h  gpu_device.cpp  gpu_device.h  main.cpp  results_logger.cpp  results_logger.h  shader_compiler.cpp  shader_compiler.h  texture_loader.cpp  texture_loader.h
tests/: CMakeLists.txt  test_metrics.cpp
(+8 files in other folders)
